# afb-requests

./: .codiumai.toml  .continueignore  .continuerc.json  .env.example  .gitignore  .gitpod.yml  .pr_agent.toml  .pre-commit-config.yaml  .ruff.toml  LICENSE  README.md  dump.rdb  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: .pr-agent-example.yml  .pr-agent.yml.example  api.yml  audit.yml  django.yml  linter-py.yml  nuxt3.yml  ui.yml  workflow.yml
.trunk/: trunk.yaml
.trunk/configs/: .hadolint.yaml  .yamllint.yaml
afb/: manage.py  requirements.in  requirements.txt
afb-vite/: requirements.txt
afb-vite/afb/: asgi.py  settings.py
afb-vite/afbcore/: admin.py
afb-vite/afbcore/models/: branch.py
afb-vite/afbcore/views/: __init__.py  dashboard.py
afb-vite/ui/: package.json  tailwind.config.js  vite.config.ts
afb-vite/ui/src/: App.vue  index.css
afb/afb/: asgi.py  settings.py  urls.py  wsgi.py
afb/afbcore/: admin.py  views.py
afb/afbcore/forms/: __init__.py  client.py
afb/afbcore/migrations/: 0001_initial.py
afb/afbcore/models/: __init__.py  branch.py  client.py  delivery.py  manager.py  (+4 more)
apps/: README.md  docker-compose.yml
apps/afb-vite/: requirements.in
apps/afb_requests/: .gitignore  CONTRIBUTORS.txt  LICENSE  README.md  manage.py  pyproject.toml
apps/api/: .codiumai.local.toml  .codiumai.toml  .env.example  Dockerfile  gunicorn.conf.py  package-lock.json  pnpm-lock.yaml  pyproject.toml  requirements.in  requirements.txt
apps/api/afb/: settings.py  test_runner.py  urls.py
apps/api/afb/urls/: __init__.py  extra_api_views.py
apps/api/afbcore/: __init__.py  admin.py  apps.py  permissions.py  signals.py
apps/api/afbcore/contrib/: api_router.py
apps/api/afbcore/fixtures/: branches.json  delivery_regions.json  sites.json  users.json
apps/api/afbcore/forms/: __init__.py
apps/api/afbcore/middleware/: __init__.py
apps/api/afbcore/migrations/: 0001_initial.py  0002_alter_foodrequest_address_buildingtype_and_more.py  0002_alter_profile_address_alter_profile_address_verbatim.py  0002_alter_role_name.py  0002_branch_country_deliveryregion_address_line1_and_more.py  0002_rename_first_name_profile_preferred_name_and_more.py  0002_rename_status_foodrequest_request_status.py  0002_user_phone.py  0003_alter_branch_options_alter_deliveryregion_id.py  0003_alter_profile_options_branch_delivery_radius_and_more.py  0003_alter_role_level.py  0003_user_first_name_user_last_name.py  0004_branch_hidden_branch_operational.py  0004_merge_20240324_1930.py  0004_remove_deliveryregion_display_name_and_more.py  0005_alter_foodrequest_pets.py  0005_branch_created_branch_details_branch_is_removed_and_more.py  0006_foodrequest_ext_address_details.py  0006_rename_highlighted_foodrequest_flagged.py  0007_alter_foodrequest_accept_terms_and_more.py  0007_profile_address_details_profile_ext_address_details.py  0008_remove_foodrequest_pets_foodrequest_pet_details.py  0008_remove_profile_branches_profile_branch.py  0009_alter_branch_options_pet_profile.py  0010_alter_deliveryregion_options_alter_profile_options_and_more.py  0011_pet_animal_details.py  0012_alter_foodrequest_contact_email_and_more.py
apps/api/afbcore/models/: __init__.py  base.py  branch.py  delivery.py  delivery_region.py  food_available.py  food_request.py  mixins.py  pet.py  request.py
apps/api/afbcore/models/users/: __init__.py  client.py  profile.py  role.py  user.py
apps/api/afbcore/serializers/: __init__.py  branch_serializer.py  delivery_region_serializer.py  food_request_serializer.py  mixins.py  pet_serializer.py  profile_serializer.py  register_serializer.py  register_user_serializer.py  user_serializer.py
apps/api/afbcore/serializers/profile/: pet_serializer.py  profile_serializer.py
apps/api/afbcore/serializers/request/: food_request_serializer.py
apps/api/afbcore/serializers/user/: profile_serializer.py  register_serializer.py  user_serializer.py
apps/api/afbcore/templates/: appshell.html  base.html  passwordless_token_email.html  passwordless_verification_email.html
apps/api/afbcore/templates/afbcore/: client_request.html  client_signup_form.html  login.html
apps/api/afbcore/templates/onboarding/: passwordless_token_email.html  passwordless_token_email.txt  passwordless_verification_email.html  passwordless_verification_email.txt
apps/api/afbcore/templates/registration/: login.html
apps/api/afbcore/tests/: test_signals.py
apps/api/afbcore/tests/models/: test_delivery_region.py  test_profile.py  test_role.py  test_user.py
apps/api/afbcore/tests/serializers/: test_profile_serializer.py  test_profile_serializer_meta.py  test_register_user_serializer.py
apps/api/afbcore/tests/views/: __test__userview.py  __test_userview_register.py  test__requests__view.py  test_branch_viewset.py  test_food_requests_viewset.py  test_food_requests_viewset2.py  test_food_requests_viewset_api.py  test_pet_viewset.py  test_profile_viewset.py  test_requests.py  test_user_view.py  test_users.py  test_userviewset.py
apps/api/afbcore/views/: __init__.py  authtoken.py  base.py  branch_viewset.py  branches.py  food_request_view.py  pet_viewset.py  profile_viewset.py  public.py  register.py  registration.py  user_view.py  users.py
apps/api/afbcore/views/admin/: branch_admin.py
apps/api/afbcore/views/requests/: __init__.py  food_request.py
apps/api/afbcore/views/users/: __init__.py
apps/api/static/: robots.txt
apps/auth/: README.md
apps/ui/: .codiumai.toml  .env.example  .gitignore  .npmrc  README.md  app.config.ts  app.vue  builder.config.ts  error.vue  index.html  nuxt.config.ts  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.ts  prettier.config.js  tailwind.config.js  tailwind.config.ts  tsconfig.json  vite.config.mts  vite.config.ts  vitest.config.ts  vueform.config.ts
apps/ui-nuxt3/: nuxt.config.ts  package-lock.json  package.json
apps/ui-vue3/: .env.empty  Dockerfile  README.md  index.html  pnpm-lock.yaml  tailwind.config.ts  vite.config.mts  volar.config.ts
etc/caddy/: Caddyfile
public/: README.md
(+200 files in other folders)
